[metadata]
name = imbalanced_sampler
version = 0.1
author = Hendrik Mehrtens
author_email = mehrtens-hendrik@t-online.de
description = An imbalanced dataset sampler for PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Schinkikami/PyT-ImbalancedDatasetSampler
project_urls =
    Bug Tracker = https://github.com/Schinkikami/PyT-ImbalancedDatasetSampler/issues
classifiers =
    Environment :: Console
    Natural Language :: English
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = imbalanced_sampler
packages = find:
python_requires = >=3.6

[options.packages.find]
where = imbalanced_sampler